--- a/template/style.scss
+++ b/template/style.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: museo500;
-    src: url("fonts/museo500-regular-webfont.woff2") format("woff2"), url(fonts/museo500-regular-webfont.woff) format("woff");
+    src: url("https://cdn.jsdelivr.net/gh/gaomx/cdn@0.2/template/fonts/museo500-regular-webfont.woff2") format("woff2"), url(https://cdn.jsdelivr.net/gh/gaomx/cdn@0.2/template/fonts/museo500-regular-webfont.woff) format("woff");
     font-weight: 400;
     font-style: normal;
 }
